--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "openai-realtime-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is an upgraded version of the V1 repo: https://github.com/Barty-Bart/openai-realtime-api-voice-assistant",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,11 +16,12 @@
     "@fastify/websocket": "^11.0.0",
     "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
     "axios": "^1.4.0",
-    "dotenv": "^16.4.5",
-    "fastify": "^5.0.0",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
     "form-data": "^4.0.0",
     "node-fetch": "^3.3.2",
-    "twilio": "^5.3.3",
+    "openai": "^4.81.0",
+    "twilio": "^5.4.3",
     "ws": "^8.18.0"
   }
 }
